--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using InplayBet.Web.Utilities
 @using InplayBet.Web.Models
 @using System.Globalization
-@model UserModel
+@model UserRankViewModel
 @{
     ViewBag.Title = "Member Profile";
 }
@@ -16,20 +16,20 @@
                 <img width="150" src='@Url.Content(Model.AvatarPath)' alt="">
                 <div class="name-block">
                     <h4><span>Name:</span> @Model.UserId</h4>
-                    <p class="member">Member Since: @Model.CreatedOn.ToString("d")</p>
-                    <p class="join">Ranking: 4</p>
-                    <p class="bookmarker">Bookmarker - @Model.BookMaker.BookMakerName.ToString()</p>
+                    <p class="member">Member Since: @Model.MemberSince.ToString("d", (new CultureInfo(Model.CultureCode)))</p>
+                    <p class="join">Ranking: @Model.Rank</p>
+                    <p class="bookmarker">Bookmarker - @Model.BookMakerName.ToString()</p>
                 </div>
                 <div class="detail-block">
-                    <p class="left">Wins @ViewBag.TotalWonChallengeCount</p>
-                    <p class="left">Losses @ViewBag.TotalLostChallengeCount</p>
-                    <p class="left">Winning Bets @ViewBag.TotalWonBetCount</p>
-                    <p class="left">Won @ViewBag.TotalWonChallengeAmount</p>
-                    <p class="left">Placed -@ViewBag.TotalPlacedChallengeAmount.ToString("C")</p>
-                    <p class="left">Profit @ViewBag.TotalProfitAmount.ToString("C")</p>
+                    <p class="left">Wins @Model.Wins</p>
+                    <p class="left">Losses @Model.Losses</p>
+                    <p class="left">Winning Bets @Model.WinningBets</p>
+                    <p class="left">Won @Model.Won</p>
+                    <p class="left">Placed -@Model.Placed.ToString("C", (new CultureInfo(Model.CultureCode)))</p>
+                    <p class="left">Profit @Model.Profit.ToString("C", (new CultureInfo(Model.CultureCode)))</p>
                 </div>
             </div>
-            @Html.Action("GetChallengesByUser", "Bet", new { userKey = (int)ViewBag.UserKey })
+            @Html.Action("GetChallengesByUser", "Bet", new { userKey = Model.UserKey })
         </div>
     </div>
 </div>
