--- a/InplayBet.Web/Views/ContactUs/Index.cshtml
+++ b/InplayBet.Web/Views/ContactUs/Index.cshtml
@@ -30,5 +30,5 @@
         </ul>
     </div>
     <div class="contact-img"><img src="images/contact-icon.jpg" alt=""></div>
-    <div class="promo-bnr"><img src="images/bet-promo-bnr.jpg" alt=""></div>
+    @{Html.RenderPartial("_PromoBanner");}
 </div>
