--- a/InplayBet.Web/Views/Home/Index.cshtml
+++ b/InplayBet.Web/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@{
+﻿@using InplayBet.Web.Models
+@model List<UserRankViewModel>
+@{
     ViewBag.Title = "Home";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @{Html.RenderPartial("_MainBanner");}
 <div class="main-container">
@@ -13,234 +14,7 @@
         <div class="heading-bg">
             <h2>leaderboard</h2>
         </div>
-        <ul class="leadbroad-block">
-            <li>
-                <div class="position">1st</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">2nd</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="last">
-                <div class="position">3rd</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">4th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">5th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="last">
-                <div class="position">6th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">7th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="position">8th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-            <li class="last">
-                <div class="position">9th</div>
-                <div class="leaderblock">
-                    <h3 class="blue-heading">Member Profile</h3>
-                    <div class="block-top">
-                        <img src="images/leadboard-sh-img.jpg" alt="">
-                        <h4>John Smith</h4>
-                        <p class="member">Member Since: 21-2-15</p>
-                        <p class="join">Ranking: 4</p>
-                        <div class="clear"></div>
-                        <div class="points">
-                            <p class="left">Wins - 7</p>
-                            <p class="right">Losses - 18</p>
-                        </div>
-                        <div class="points">
-                            <p class="left">Won - £7144</p>
-                            <p class="right">Lost - £360</p>
-                        </div>
-                        <div class="points points-botm">
-                            <p class="left">Winning Bets</p>
-                            <p class="right">Profit</p>
-                        </div>
-                    </div>
-                </div>
-            </li>
-        </ul>
-
-        <div class="promo-bnr"><img src="images/bet-promo-bnr.jpg" alt=""></div>
+        @{Html.RenderPartial("_UserRank", Model, new ViewDataDictionary { { "LastElement", 3 } });}
+        @{Html.RenderPartial("_PromoBanner");}
     </div>
 </div>
