--- a/InplayBet.Web/Views/Home/Index.cshtml
+++ b/InplayBet.Web/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Home";
 }
 @{Html.RenderPartial("_MainBanner");}
+@*<p>@Url.Action("ActivateUser", "RegisterUser", new { timestamp = DateTime.Now.Ticks.ToString(), userid = 1 })</p>*@
 <div class="main-container">
     <div class="container">
         <h1 class="heading">Welcome to Inplay<span class="grn-bg">20</span><span class="thin">.com</span></h1>
