--- a/InplayBet.Web/Views/RegisterUser/Index.cshtml
+++ b/InplayBet.Web/Views/RegisterUser/Index.cshtml
@@ -22,7 +22,7 @@
             <h4 class="grn-heading">£20-£1000 Challenge Account Registration -</h4>
             <p>If you are waiting to sign up to our £20-£1000 system, please fill in the details below and create your account -</p>
 
-            @{Html.RenderPartial("_SignUp", Model);}
+            @Html.Partial("_SignUp", Model)
         </div>
     </div>
 </div>
