--- a/InplayBet.Web/Views/Bet/GetChallengesByUser.cshtml
+++ b/InplayBet.Web/Views/Bet/GetChallengesByUser.cshtml
@@ -2,7 +2,10 @@
 @using InplayBet.Web.Models.Base
 @using InplayBet.Web.Utilities
 @model List<ChallengeModel>
-@{Layout = null;}
+@{
+    Layout = null;
+    int userKey = (int)(ViewBag.UserKey ?? ViewData["UserKey"]);
+}
 @functions {
     public static string SetChallengeColor(ChallengeModel challenge)
     {
@@ -19,15 +22,22 @@
 }
 @helper PopulateChallenge(ChallengeModel challenge, bool showPromo, bool showInplay)
 {
+    int userKey = (int)(ViewBag.UserKey ?? ViewData["UserKey"]);
     <div class='@((challenge == null || challenge.ChallengeId == 0) ? "yellow-box" : SetChallengeColor(challenge))'>
         <div class="blk-bg">
             <h3 class="blk-heading">Challenge @((challenge == null) ? "1" : challenge.ChallengeNumber.AsString()) @(showInplay ? "- Inplay" : "")</h3>
-            <a href="#" class="report-btn">report</a>
+            @if (userKey != SessionVeriables.GetSessionData<int>(SessionVeriables.UserKey)
+                && SessionVeriables.GetSessionData<int>(SessionVeriables.UserKey) > 0
+                && !string.IsNullOrEmpty(challenge.ChallengeStatus))
+            {
+                <a href="javascript:ShowReportWindow(@userKey, @challenge.ChallengeId, '@challenge.ChallengeStatus')" class="report-btn">report</a>
+                @*@Url.Action("ShowReportWindow", "Bet", new { reportToUserKey = userKey, challengeId = challenge.ChallengeId })*@
+            }
         </div>
         <div class="scroll">
             <div class="outer">
                 @Html.Partial("GetBetsByChallenge", ((challenge == null || challenge.ChallengeId == 0) ? (new List<BetModel>()) : challenge.Bets),
-                    new ViewDataDictionary(this.ViewBag) { { "CurrentChallenge", challenge }, { "UserKey", (int)ViewBag.UserKey }, { "CultureCode", ViewBag.CultureCode } })
+                    new ViewDataDictionary(this.ViewBag) { { "CurrentChallenge", challenge }, { "UserKey", userKey }, { "CultureCode", ViewBag.CultureCode } })
             </div>
         </div>
     </div>
